[tool.poetry]
name = "pytest-proj"
version = "0.1.0"
description = ""
authors = ["Alexandr L. <alexandp83@mail.ru>"]
readme = "README.md"
packages = [{include = "pytest_proj"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
